GNOME Bugzilla – Bug 739920
Pressing Escape during re-ordering of columns causes crash
Last modified: 2014-12-14 23:32:33 UTC
Created attachment 290379 [details] Quick fix See: https://bugzilla.redhat.com/show_bug.cgi?id=1162288 Issue is also present in 3.12 from a brief look. Attached patch makes gtk_tree_view_button_release_drag_column() happy.
Created attachment 290380 [details] [review] Patch
Review of attachment 290380 [details] [review]: Patch looks fine. Feel free to push it to the 3.10 or 3.12 branches, but I don't anticipate doing any more releases from those branches.