gtktreeview: Fix cancel of column re-ordering via the Escape key.

https://bugzilla.redhat.com/show_bug.cgi?id=1162288

https://bugzilla.gnome.org/show_bug.cgi?id=739920